--- a/wiki/DataLayer.wiki
+++ b/wiki/DataLayer.wiki
@@ -70,6 +70,6 @@ The XML file contains daily temperatures for the Lambert St. Louis International
 
 = Implementation =
 
-A specific implementation in XmlDataService uses the Linq to XML to read the requested temperatures from the NCDC file. The implementation of the month call simply calls the general days method after computing the proper number of days. (watching out for the [http://en.wikipedia.org/wiki/Off-by-one_error fencepost problem]!). Both method implementations return generic Lists of the custom DateTemperature objects.
+A specific implementation in *XmlDataService* uses the Linq to XML to read the requested temperatures from the NCDC file. The implementation of the month call simply calls the general days method after computing the proper number of days. (watching out for the [http://en.wikipedia.org/wiki/Off-by-one_error fencepost problem]!). Both method implementations return generic Lists of the custom *DateTemperature* objects.
 
 An alternative to Linq To XML was XSLT querying of the data but I wanted to show Linq To XML instead of that older technology.
