Fixed wiki syntax for inline code

--- a/wiki/WebClientLayer.wiki
+++ b/wiki/WebClientLayer.wiki
@@ -8,8 +8,8 @@ The web client layer for the temperature sample uses Google Visualization APIs t
 To provide maximum flexibility for the client, the Web Service providing the temperature data from another domain is isolated in its own Data Layer.
 The Data layer consumes the Web Service and returns a System.Data.DataTable, which is suitable for use by my separate Google Visualization library.
 === ITemperatureSerializer ===
-The 'ITemperatureSerializer' interface specifies the operation used by the client layer, namely to serialize the temperature data onto a stream.
-The reference implementation, by 'GoogleVisualizationTemperatureSerializer', uses [http://code.google.com/p/bortosky-google-visualization/ my own public, free, open-source library] for producing Google Visualization data from .NET types.
+The `ITemperatureSerializer` interface specifies the operation used by the client layer, namely to serialize the temperature data onto a stream.
+The reference implementation, by `GoogleVisualizationTemperatureSerializer`, uses [http://code.google.com/p/bortosky-google-visualization/ my own public, free, open-source library] for producing Google Visualization data from .NET types.
 == Web Layer ==
 The actual exposed Web layer is composed of 
   * a simple call to the data layer to retrieve the Google-formatted data, 
