Fixed wiki syntax for inline code

--- a/wiki/ServiceLayer.wiki
+++ b/wiki/ServiceLayer.wiki
@@ -16,15 +16,16 @@ The NCDC seems to be returning temperatures of 9999.9 in certain circumstances, 
 For purposes of demonstration, these temperatures are adjusted to the prior day's values.
 This adjustment is done at this lowest level Data Layer so downstream clients won't have to deal with the bad data.
 ====ITemperatureReader====
-To keep the Service Layer lean and clean, ITemperatureReader specifies a general-purpose, low-level GetTemperaturesByDate method.
-Callers, such as this reference application, can compose methods over this one, such as GetTemperaturesByMonth, which computes appropriate argument values for GetTemperaturesByDate.
+To keep the Service Layer lean and clean, `ITemperatureReader` specifies a general-purpose, low-level `GetTemperaturesByDate` method.
+Callers, such as this reference application, can compose methods over this one, such as `GetTemperaturesByMonth`, which computes appropriate argument values for `GetTemperaturesByDate`.
 Another method specified by the interface to one to retrieve the limits of the data available, i.e., the first date for which a temperature range is available.
 The XMLTemperatureReader uses the *lambda expression* predicate capabilities of the *Linq to XML* framework types to provide a concise and fast implementation for this method.
-Of course the XMLTemperatureReader is only a reference implementation of the ITemperatureReader interface. Other implementations might be a SqlServerTemperatureReader or OracleTemperatureReader.
+Of course the `XMLTemperatureReader` is only a reference implementation of the `ITemperatureReader` interface. Other implementations might be a `SqlServerTemperatureReader` or `OracleTemperatureReader`.
 ==Web Layer==
 The Web Layer simply provides a *web service* front-end to the underlying data layer described above.
 The service is available at http://sns.tzo.com/bortoskyservices/TemperatureService.asmx.
-As mentioned above, the service also exposes a second method, GetTemperaturesByMonth which simply computes appropriate argument values for the TemperatureReader's GetTemperaturesByDate method.
+As mentioned above, the service also exposes a second method, `GetTemperaturesByMonth` which simply computes appropriate argument values for the TemperatureReader's `GetTemperaturesByDate` method.
 The XSD schema specifying the composite Response type is available at http://sns.tzo.com/bortoskyservices/TemperatureContract.xsd.
+The response was wrapped in a composite object for maximum contract flexibility. New items can be added to the response requiring only a recompile of client code, not a recoding.
 Note that the graphical schema designer was removed from Visual Studio 2008 for some reason.
 Many other schema editors are available but this simple one was composed manually in the VS 2008 text-based editor.
